--- a/index.ipynb
+++ b/index.ipynb
@@ -174,7 +174,8 @@
    },
    "outputs": [],
    "source": [
-    "position\"Ceo\" # 'CEO'"
+    "position = \"Ceo\" # 'CEO'\n",
+    "position.up"
    ]
   },
   {
