--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    "outputs": [],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "email.ends"
+    "email.endswith()"
    ]
   },
   {
