--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,8 @@
    },
    "outputs": [],
    "source": [
-    "website = 'vandelay.com' # 'www.vandelay.com'\n"
+    "website = 'vandelay.com' # 'www.vandelay.com'\n",
+    "print(\"www\")"
    ]
   },
   {
