--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,7 @@
    "outputs": [],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "print(\"www\")"
+    "print(\"www.\" + webs)"
    ]
   },
   {
