--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,8 @@
    },
    "outputs": [],
    "source": [
-    "phone\"7285553334\" # 728\n"
+    "phone = \"7285553334\" # 728\n",
+    "phoneé*"
    ]
   },
   {
